# ray-tracing-aesthetic-mcp

./: README.md  pyproject.toml
ray_tracing_aesthetic_mcp/: __init__.py  server.py
